--- a/data/countries/de/he/giessen/data.yaml
+++ b/data/countries/de/he/giessen/data.yaml
@@ -40,4 +40,4 @@ state: Hessen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-heuchelheim.de
+    url: http://www.gruene-heuchelheim.de/
