--- a/data/countries/de/he/offenbach-land/data.yaml
+++ b/data/countries/de/he/offenbach-land/data.yaml
@@ -18,7 +18,7 @@ state: Hessen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruene-dreieich.de
+    url: https://www.gruene-dreieich.de/
 ---
 city: Heusenstamm
 country: DE
