--- a/data/countries/de/nw/minden-luebbecke/data.yaml
+++ b/data/countries/de/nw/minden-luebbecke/data.yaml
@@ -30,7 +30,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-milk.de
+    url: http://www.gruene-milk.de/
 ---
 city: Hille
 country: DE
@@ -40,7 +40,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.schulder.com/gruene
+    url: https://gruene-hille.de/
 ---
 city: Hüllhorst
 country: DE
@@ -50,7 +50,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-huellhorst.de
+    url: https://www.gruene-huellhorst.de/
 ---
 city: Lübbecke
 country: DE
@@ -60,7 +60,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-luebbecke.de
+    url: http://www.gruene-luebbecke.de/
 ---
 city: Minden
 country: DE
@@ -70,7 +70,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-minden.de
+    url: http://www.gruene-minden.de/
 ---
 city: Petershagen
 country: DE
@@ -80,7 +80,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-petershagen.de
+    url: http://gruene-petershagen.de/
 ---
 city: Porta Westfalica
 country: DE
@@ -90,7 +90,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.porta.de
+    url: https://xn--grne-porta-westfalica-9hc.de/
 ---
 city: Preußisch Oldendorf
 country: DE
@@ -100,7 +100,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-preussischoldendorf.de
+    url: https://www.gruene-preussischoldendorf.de/
 ---
 city: Rahden
 country: DE
@@ -110,4 +110,4 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-rahden.de
+    url: http://www.gruene-rahden.de/
