--- a/data/countries/de/nw/unna/data.yaml
+++ b/data/countries/de/nw/unna/data.yaml
@@ -8,7 +8,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-kreis-unna.de/
+    url: http://gruene-kreis-unna.de/
   - type: FACEBOOK
     url: https://www.facebook.com/DieGrunenUnna
   - type: TWITTER
